--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="container">
@@ -21,8 +23,6 @@
           <button id="add-button">Add</button>
         </form>
         <ul class="list" id="list">
-          <li>做家事 <span class="delete"></span></li>
-          <li class="checked">做家事 <span class="delete"></span></li>
         </ul>
       </div>
     </div>
