--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
           <input type="text" id="input" />
           <button id="add-button">Add</button>
         </form>
-        <ul class="list" id="list">
-        </ul>
+        <ul class="list" id="list"></ul>
       </div>
     </div>
   </body>
